# intercom

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  M1_PLAN.md  POSTMORTEM.md  README.md  SHARED_AUDIO.md  STATUS.md  V2_PLAN.md  build.gradle.kts  settings.gradle.kts
.forgejo/workflows/: ci.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  intercore_jni.cpp  voice_audio.cpp  voice_audio.h
app/src/main/kotlin/com/elodin/intercom/: IntercomForegroundService.kt  MainActivity.kt  NativeCore.kt
app/src/main/kotlin/com/elodin/intercom/audio/: VoiceAudioRoute.kt
app/src/main/kotlin/com/elodin/intercom/diag/: DiagSnapshot.kt
app/src/main/kotlin/com/elodin/intercom/media/: MediaCapture.kt  MediaDecoder.kt  MediaEncoder.kt  MediaPlayout.kt  MediaProjectionRelay.kt  MediaSeqFilter.kt  MediaShareController.kt  MediaShareService.kt  MediaWire.kt  SilenceDetector.kt  VoiceActivityGate.kt
app/src/main/kotlin/com/elodin/intercom/proto/: MediaFrame.kt  Proto.kt  VoiceFrame.kt
app/src/main/kotlin/com/elodin/intercom/radio/: BackoffLadder.kt  ConnectionStats.kt  GuestRadio.kt  HostRadio.kt  RadioController.kt  RadioLinkHealth.kt  RadioSessionController.kt  RealtimeVoiceSession.kt  RealtimeVoiceTransport.kt  ScanStartBudget.kt  ThroughputMeter.kt  TxPacer.kt
app/src/main/kotlin/com/elodin/intercom/session/: Epoch.kt  LinkState.kt  RadioEndpoint.kt  RadioEvent.kt  SessionController.kt  TransportMode.kt
app/src/main/kotlin/com/elodin/intercom/wifidirect/: WifiDirectGuestRadio.kt  WifiDirectHostRadio.kt  WifiDirectMediaLink.kt  WifiDirectWire.kt
app/src/main/res/drawable/: ic_intercom_notification.xml
app/src/main/res/values/: themes.xml
app/src/test/kotlin/com/elodin/intercom/media/: MediaSeqFilterTest.kt  MediaWireTest.kt  SilenceDetectorTest.kt  VoiceActivityGateTest.kt
app/src/test/kotlin/com/elodin/intercom/proto/: MediaFrameTest.kt  ProtoTest.kt  VoiceFrameTest.kt
app/src/test/kotlin/com/elodin/intercom/radio/: BackoffLadderTest.kt  RadioLinkHealthTest.kt  RadioSessionControllerTest.kt  RadioSessionEndToEndTest.kt  RealtimeVoiceSessionTest.kt  ScanStartBudgetTest.kt  ThroughputMeterTest.kt  TxPacerTest.kt
app/src/test/kotlin/com/elodin/intercom/session/: SessionControllerTest.kt  SessionEndToEndTest.kt
app/src/test/kotlin/com/elodin/intercom/wifidirect/: WifiDirectWireTest.kt
config/: detekt.yml
native/: CMakeLists.txt
native/codec/: adpcm.h
native/core/: ring_buffer.h  seq_filter.h
native/tests/: check.h  test_adpcm.cpp  test_media_frame.cpp  test_ring_buffer.cpp  test_seq_filter.cpp  test_voice_frame.cpp
proto/: constants.h  media_frame.h  voice_frame.h
scripts/: bootstrap.sh
tools/: gen-proto.sh  smoke
